crates/monkey-lang/src/parsing/snapshots/lexer/ok/bool_lit.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/bool_lit.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 4,
        },
        kind: TrueKw,
        text: "true",
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Semicolon,
        text: ";",
    },
    Token {
        span: Span {
            start: 6,
            end: 11,
        },
        kind: FalseKw,
        text: "false",
    },
    Token {
        span: Span {
            start: 11,
            end: 12,
        },
        kind: Semicolon,
        text: ";",
    },
]
