crates/monkey-lang/src/parsing/snapshots/lexer/ok/ident.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/ident.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 11,
        },
        kind: Ident,
        text: "first_ident",
    },
    Token {
        span: Span {
            start: 12,
            end: 13,
        },
        kind: Plus,
        text: "+",
    },
    Token {
        span: Span {
            start: 14,
            end: 27,
        },
        kind: Ident,
        text: "another_ident",
    },
]
