crates/monkey-lang/src/parsing/snapshots/lexer/ok/keyword.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/keyword.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: LetKw,
        text: "let",
    },
    Token {
        span: Span {
            start: 4,
            end: 7,
        },
        kind: Ident,
        text: "var",
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Eq,
        text: "=",
    },
    Token {
        span: Span {
            start: 10,
            end: 11,
        },
        kind: Semicolon,
        text: ";",
    },
    Token {
        span: Span {
            start: 12,
            end: 18,
        },
        kind: ReturnKw,
        text: "return",
    },
    Token {
        span: Span {
            start: 19,
            end: 21,
        },
        kind: IfKw,
        text: "if",
    },
    Token {
        span: Span {
            start: 22,
            end: 26,
        },
        kind: Ident,
        text: "then",
    },
]
