crates/monkey-lang/src/parsing/snapshots/lexer/ok/multi_char.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/multi_char.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 2,
        },
        kind: ShiftLeft,
        text: "<<",
    },
    Token {
        span: Span {
            start: 3,
            end: 5,
        },
        kind: ShiftRight,
        text: ">>",
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Bang,
        text: "!",
    },
    Token {
        span: Span {
            start: 8,
            end: 10,
        },
        kind: NotEq,
        text: "!=",
    },
    Token {
        span: Span {
            start: 11,
            end: 13,
        },
        kind: EqEq,
        text: "==",
    },
    Token {
        span: Span {
            start: 14,
            end: 15,
        },
        kind: Colon,
        text: ":",
    },
    Token {
        span: Span {
            start: 16,
            end: 18,
        },
        kind: Walrus,
        text: ":=",
    },
]
