crates/monkey-lang/src/parsing/snapshots/lexer/ok/numbers.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/numbers.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: LetKw,
        text: "let",
    },
    Token {
        span: Span {
            start: 4,
            end: 7,
        },
        kind: Ident,
        text: "num",
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Eq,
        text: "=",
    },
    Token {
        span: Span {
            start: 10,
            end: 16,
        },
        kind: Number,
        text: "14_323",
    },
    Token {
        span: Span {
            start: 16,
            end: 17,
        },
        kind: Semicolon,
        text: ";",
    },
]
