crates/monkey-lang/src/parsing/snapshots/lexer/ok/operators.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/operators.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: Asterisk,
        text: "*",
    },
    Token {
        span: Span {
            start: 2,
            end: 3,
        },
        kind: Modulo,
        text: "%",
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Plus,
        text: "+",
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Minus,
        text: "-",
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Tilde,
        text: "~",
    },
    Token {
        span: Span {
            start: 10,
            end: 11,
        },
        kind: Gt,
        text: ">",
    },
    Token {
        span: Span {
            start: 12,
            end: 13,
        },
        kind: Lt,
        text: "<",
    },
    Token {
        span: Span {
            start: 14,
            end: 15,
        },
        kind: Bang,
        text: "!",
    },
    Token {
        span: Span {
            start: 16,
            end: 18,
        },
        kind: Slash,
        text: "/\n",
    },
]
