crates/monkey-lang/src/parsing/snapshots/lexer/ok/punct.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/punct.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: Semicolon,
        text: ";",
    },
    Token {
        span: Span {
            start: 1,
            end: 2,
        },
        kind: Dot,
        text: ".",
    },
    Token {
        span: Span {
            start: 2,
            end: 3,
        },
        kind: Comma,
        text: ",",
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Dot,
        text: ".",
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Colon,
        text: ":",
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Eq,
        text: "=",
    },
]
