crates/monkey-lang/src/parsing/snapshots/lexer/ok/string.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/lexer/ok/string.mk

---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: LetKw,
        text: "let",
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Ident,
        text: "s",
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Eq,
        text: "=",
    },
    Token {
        span: Span {
            start: 9,
            end: 20,
        },
        kind: String,
        text: "long string",
    },
    Token {
        span: Span {
            start: 21,
            end: 22,
        },
        kind: Semicolon,
        text: ";",
    },
    Token {
        span: Span {
            start: 23,
            end: 26,
        },
        kind: LetKw,
        text: "let",
    },
    Token {
        span: Span {
            start: 27,
            end: 29,
        },
        kind: Ident,
        text: "s2",
    },
    Token {
        span: Span {
            start: 30,
            end: 31,
        },
        kind: Eq,
        text: "=",
    },
    Token {
        span: Span {
            start: 33,
            end: 47,
        },
        kind: String,
        text: "another string",
    },
    Token {
        span: Span {
            start: 48,
            end: 49,
        },
        kind: Semicolon,
        text: ";",
    },
]
